<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Perfil">

    <TextView
        android:id="@+id/textView"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:text="@string/dados_pessoais"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.232"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.088" />

    <TextView
        android:id="@+id/NOME_PERFIL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome"
        tools:layout_editor_absoluteX="11dp"
        tools:layout_editor_absoluteY="103dp"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/CPF_PERFIL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cpf"
        tools:layout_editor_absoluteX="11dp"
        tools:layout_editor_absoluteY="130dp"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/CPF_PERFIL"
        tools:layout_editor_absoluteY="130dp"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/NOME_PERFIL"
        tools:layout_editor_absoluteY="103dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/EMAIL_PERFIL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        tools:layout_editor_absoluteX="12dp"
        tools:layout_editor_absoluteY="156dp"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/PIS_PERFIL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pis"
        tools:layout_editor_absoluteX="11dp"
        tools:layout_editor_absoluteY="181dp"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/EMAIL_PERFIL"
        tools:layout_editor_absoluteY="156dp"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/textview"
        app:layout_constraintStart_toEndOf="@+id/PIS_PERFIL"
        tools:layout_editor_absoluteY="181dp"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rg"
        tools:layout_editor_absoluteX="159dp"
        tools:layout_editor_absoluteY="129dp"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        tools:layout_editor_absoluteY="129dp"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="ENDEREÇO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.232"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.338" />

    <TextView
        android:id="@+id/endereco_PERFIL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/longadouro"
        tools:layout_editor_absoluteX="11dp"
        tools:layout_editor_absoluteY="285dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="TextView"
        app:layout_constraintTop_toBottomOf="@+id/endereco_PERFIL"
        tools:layout_editor_absoluteX="11dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintTop_toBottomOf="@+id/textView19"
        tools:layout_editor_absoluteX="11dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CEP:"
        tools:layout_editor_absoluteX="12dp"
        tools:layout_editor_absoluteY="402dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="BAIRRO"
        tools:layout_editor_absoluteX="132dp"
        tools:layout_editor_absoluteY="402dp"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ESTADO"
        tools:layout_editor_absoluteX="11dp"
        tools:layout_editor_absoluteY="457dp"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CIDADE"
        tools:layout_editor_absoluteX="132dp"
        tools:layout_editor_absoluteY="457dp"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="TextView"
        app:layout_constraintTop_toBottomOf="@+id/textView21"
        tools:layout_editor_absoluteX="132dp"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="TextView"
        app:layout_constraintTop_toBottomOf="@+id/textView17"
        tools:layout_editor_absoluteX="11dp"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="TextView"
        app:layout_constraintTop_toBottomOf="@+id/textView22"
        tools:layout_editor_absoluteX="16dp"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="TextView"
        app:layout_constraintTop_toBottomOf="@+id/textView23"
        tools:layout_editor_absoluteX="132dp"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintTop_toBottomOf="@+id/textView20"
        tools:layout_editor_absoluteX="134dp"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="NUMERO"
        tools:layout_editor_absoluteX="11dp"
        tools:layout_editor_absoluteY="340dp"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="COMPLEMENTO"
        tools:layout_editor_absoluteX="134dp"
        tools:layout_editor_absoluteY="340dp"
        tools:ignore="MissingConstraints"/>
</androidx.constraintlayout.widget.ConstraintLayout>